# protoeditor

./: README.md
branches/begin/protoeditor/src/: Makefile.am  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowbase.cpp
branches/begin/protoeditor/src/dbg/: dbgconfiguration.h  dbgfileinfo.cpp  dbgfileinfo.h  dbgnethelper.cpp  dbgrequestor.cpp  dbgrequestor.h  dbgrequestpack.cpp
tags/1_1_BETA2/src/php/xdebug/: Makefile.am  debuggerxd.h  xdnet.cpp  xdvariableparser.h
tags/1_1_BETA3/src/common/python/: Makefile.am  pythonvariable.h
tags/1_1_BETA3/src/katescriptdebuggerplugin/: Makefile.am  katedebuggerui.h  katedocwrapper.h  kateuinterface.cpp  kateuinterface.h  plugin_katescriptdebugger.cpp  plugin_katescriptdebugger.h
tags/1_1_BETA3/src/perl/: Makefile.am  perlsettingswidget.cpp
tags/1_1_BETA3/src/perl/perldb/: Makefile.am  perldebuggersettings.h  perllocalcom.h
tags/1_1_BETA3/src/php/: Makefile.am  phpsettingswidget.cpp
tags/1_1_BETA3/src/python/: Makefile.am  pythonsettings.cpp
tags/1_1_BETA3/src/settings/: Makefile.am  debuggersettingsinterface.h  protoeditorsettings.cpp  protoeditorsettings.h  sitesettings.cpp  sitesettings.h
tags/BETA_0_9/src/gubed/: Makefile.am  debuggergb.cpp  debuggergb.h  gbnet.cpp  gbnet.h  gbsettings.cpp  gbsettingswidget.cpp
trunk/katephpbrowser/src/: Makefile.am  browserlistview.cpp  browserlistview.h  browserlistviewitem.cpp  browserlistviewitem.h  browserloader.cpp  browserloader.h  browsertab.cpp  browsertab.h  katephpbrowser.desktop  katephpbrowser.lsm  plugin_katephpbrowser.cpp  plugin_katephpbrowser.h  schema.cpp  schema.h  schemaconfigurationdlg.cpp  schemaconfigurationdlg.h  schemasettings.cpp  schemasettings.h
trunk/katephpbrowser/src/nodeclasses/: Makefile.am  browsernode.cpp  browsernode.h
trunk/katephpbrowser/src/parser/: Makefile.am  PHPAST.cpp  PHPAST.hpp  lexer.g  main.cpp  parser.g  phpbrowserparser.cpp  phpbrowserparser.h  walker.g
trunk/protoeditor/: ChangeLog  FAQ  INSTALL  NEWS  README  configure.in  configure.in.in  protoeditor.kdevelop  protoeditor.kdevelop.pcs  protoeditor.kdevses  protoeditor.kno  subdirs
trunk/protoeditor/data/: Makefile.am
trunk/protoeditor/data/icons/: Makefile.am
trunk/protoeditor/data/libs/: Makefile.am
trunk/protoeditor/data/pics/: Makefile.am
trunk/protoeditor/doc/: Makefile.am
trunk/protoeditor/doc/en/: Makefile.am  index.docbook
trunk/protoeditor/images/: protoeditor.xcf
trunk/protoeditor/src/: Makefile.am  debuggerconfigform_interface.h  debuggerconfigurations.cpp  debuggermanager.cpp  debuggermanager.h  debuggersettingswidget.cpp  debuggersettingswidget.h  editortabwidget.cpp  editortabwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  protoeditor.desktop  protoeditor.h  protoeditor.kcfg  protoeditorui.rc
trunk/protoeditor/src/common/: Makefile.am  abstractdebugger.cpp  abstractdebugger.h  connection.cpp  connection.h  debuggerbreakpoint.cpp  debuggerbreakpoint.h  debuggerstack.cpp  debuggerstack.h  httpsession.cpp  httpsession.h  session.cpp  session.h  variable.cpp  variable.h
trunk/protoeditor/src/commonphp/: Makefile.am  phpdefs.h  phpvariable.h  variableparser.cpp  variableparser.h
trunk/protoeditor/src/dbg/: Makefile.am  dbg_defs.h  dbgconfiguration.cpp  dbgconnection.cpp  dbgconnection.h  dbgfileinfo.cpp  dbgfileinfo.h  dbgframe.cpp  dbgheader.cpp  dbgnet.cpp  dbgnet.h  dbgnetdata.cpp  dbgnetdata.h  dbgprofile.cpp  dbgprofile.h  dbgreceiver.cpp  dbgreceiver.h  dbgrequestor.cpp  dbgrequestor.h  dbgrequestpack.cpp  dbgrequestpack.h  dbgrequestpackbuilder.cpp  dbgrequestpackbuilder.h  dbgresponsepack.cpp  dbgresponsepack.h  dbgsettings.cpp  dbgsettings.h  dbgsettingswidget.cpp  dbgsettingswidget.h  dbgstack.cpp  dbgstack.h  debuggerdbg.cpp  debuggerdbg.h
trunk/protoeditor/src/gubed/: debuggergb.cpp  debuggergb.h  gb_defs.h  gbnet.cpp  gbnet.h  gbsettings.cpp  gbsettings.h  gbsettingswidget.cpp  gbsettingswidget.h
trunk/protoeditor/src/katescriptdebuggerplugin/: Makefile.am  katedebuggerui.cpp  katedocwrapper.cpp  kateeditorui.cpp  kateeditorui.h  katescriptdebugger.desktop  katescriptdebugger.lsm  ui.rc
trunk/protoeditor/src/perl/: Makefile.am  Makefile.in  perlsettings.cpp  perlsettings.h  perlsettingswidget.cpp  perlsettingswidget.h
trunk/protoeditor/src/php/: Makefile.am  phpdefs.h  phpsettings.cpp  phpsettings.h  phpsettingswidget.cpp  phpsettingswidget.h  phpvariable.cpp  phpvariableparser.h
trunk/protoeditor/src/protoeditor/: Makefile.am  breakpointlistview.cpp  breakpointlistview.h  breakpointlistviewitem.cpp  combostack.h  datacontroller.cpp  datacontroller.h  debuggercombostack.cpp  debuggercombostack.h  debuggerfactory.cpp  debuggerfactory.h  debuggerinterface.cpp  debuggermanager.cpp  debuggermanager.h  document.cpp  document.h  editorinterface.h  editortabwidget.cpp  editortabwidget.h  executioncontroller.cpp  executioncontroller.h  loglistview.cpp  loglistview.h  main.cpp  mainwindow.cpp  mainwindow.h  messagelistview.cpp  messagelistview.h  protoeditor.cpp  protoeditor.desktop  protoeditor.h  protoeditorui.rc  uinterface.cpp  variableslistview.cpp  variableslistview.h  variableslistviewitem.cpp  variableslistviewitem.h  watchlistview.cpp  watchlistview.h  watchwidget.cpp  (+1 more)
trunk/protoeditor/src/python/: pythonsettings.h  pythonsettingswidget.cpp
trunk/protoeditor/src/settings/: Makefile.am  browser.kcfg  browsersettingswidget.cpp  debuggersettings.kcfgc  debuggersettingsinterface.h  debuggersettingswidget.cpp  debuggersettingswidget.h  extappsettings.cpp  extappsettings.h  extoutputsettings.cpp  extoutputsettings.h  languagesettings.cpp  languagesettings.h  perlsettings.cpp  perlsettings.h  phpsettings.cpp  phpsettings.h  protoeditorsettings.cpp  protoeditorsettings.h  settings.kcfg  settings.kcfgc  sitesettings.cpp  sitesettings.h
trunk/protoeditor/src/xdebug/: Makefile.am  debuggerxd.cpp  debuggerxd.h  xdnet.cpp  xdnet.h  xdsettings.cpp  xdsettings.h  xdsettingswidget.cpp  xdsettingswidget.h  xdvariableparser.cpp
trunk/protoeditor/stuff/: svn2cl.php  svn2news.php
trunk/protoeditor/ui/: mainwindow.ui  profile.ui
(+700 files in other folders)
