dnl =======================================================
dnl FILE: ./admin/configure.in.min
dnl =======================================================

dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
 
dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.
 
dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.
 
dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
dnl    Boston, MA 02110-1301, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(protoeditor, 1.1beta3, 1.0) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

KDE_USE_QT(3.2)
AC_PATH_KDE
dnl =======================================================
dnl FILE: configure.in.in
dnl =======================================================

#MIN_CONFIG(3.2)

dnl PACKAGE set before
AC_C_BIGENDIAN
AC_CHECK_KDEMAXPATHLEN

dnl
dnl checks if we want the debugger
dnl

AC_ARG_ENABLE([kate-plugin],
    [AC_HELP_STRING([--enable-kate-plugin],
                    [Install as Kate plugin only])],
    [KATE_PLUGIN="yes"],
    [KATE_PLUGIN="no"]
)

if test x$KATE_PLUGIN = "xyes"; then
  perllibdir=${kde_datadir}/kate/plugins/katescriptdebugger/libs/perl/
  pythonlibdir=${kde_datadir}/kate/plugins/katescriptdebugger/libs/python/  
else
  perllibdir=${kde_datadir}/protoeditor/libs/perl/
  pythonlibdir=${kde_datadir}/protoeditor/libs/python/
fi


AC_SUBST(perllibdir)
AC_SUBST(pythonlibdir)

AM_CONDITIONAL(KATE_PLUGIN, test x$KATE_PLUGIN = xyes)KDE_CREATE_SUBDIRSLIST
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ data/Makefile ])
AC_CONFIG_FILES([ data/icons/Makefile ])
AC_CONFIG_FILES([ data/libs/Makefile ])
AC_CONFIG_FILES([ data/pics/Makefile ])
AC_CONFIG_FILES([ doc/Makefile ])
AC_CONFIG_FILES([ doc/en/Makefile ])
AC_CONFIG_FILES([ src/Makefile ])
AC_CONFIG_FILES([ src/common/Makefile ])
AC_CONFIG_FILES([ src/common/perl/Makefile ])
AC_CONFIG_FILES([ src/common/php/Makefile ])
AC_CONFIG_FILES([ src/common/python/Makefile ])
AC_CONFIG_FILES([ src/katescriptdebuggerplugin/Makefile ])
AC_CONFIG_FILES([ src/perl/Makefile ])
AC_CONFIG_FILES([ src/perl/perldb/Makefile ])
AC_CONFIG_FILES([ src/perl/perldbgp/Makefile ])
AC_CONFIG_FILES([ src/php/Makefile ])
AC_CONFIG_FILES([ src/php/dbg/Makefile ])
AC_CONFIG_FILES([ src/php/dbg/profiler/Makefile ])
AC_CONFIG_FILES([ src/php/gubed/Makefile ])
AC_CONFIG_FILES([ src/php/xdebug/Makefile ])
AC_CONFIG_FILES([ src/protoeditor/Makefile ])
AC_CONFIG_FILES([ src/protoeditor/ui/Makefile ])
AC_CONFIG_FILES([ src/python/Makefile ])
AC_CONFIG_FILES([ src/python/pythondbgp/Makefile ])
AC_CONFIG_FILES([ src/settings/Makefile ])
AC_CONFIG_FILES([ src/settings/widgets/Makefile ])
AC_OUTPUT
# Check if KDE_SET_PREFIX was called, and --prefix was passed to configure
if test -n "$kde_libs_prefix" -a -n "$given_prefix"; then
  # And if so, warn when they don't match
  if test "$kde_libs_prefix" != "$given_prefix"; then
    # And if kde doesn't know about the prefix yet
    echo ":"`kde-config --path exe`":" | grep ":$given_prefix/bin/:" 2>&1 >/dev/null
    if test $? -ne 0; then
      echo ""
      echo "Warning: you chose to install this package in $given_prefix,"
      echo "but KDE was found in $kde_libs_prefix."
      echo "For this to work, you will need to tell KDE about the new prefix, by ensuring"
      echo "that KDEDIRS contains it, e.g. export KDEDIRS=$given_prefix:$kde_libs_prefix"
      echo "Then restart KDE."
      echo ""
    fi
  fi
fi

if test x$GXX = "xyes" -a x$kde_have_gcc_visibility = "xyes" -a x$kde_cv_val_qt_gcc_visibility_patched = "xno"; then
  echo ""
  echo "Your GCC supports symbol visibility, but the patch for Qt supporting visibility"
  echo "was not included. Therefore, GCC symbol visibility support remains disabled."
  echo ""
  echo "For better performance, consider including the Qt visibility supporting patch"
  echo "located at:"
  echo ""
  echo "http://bugs.kde.org/show_bug.cgi?id=109386"
  echo ""
  echo "and recompile all of Qt and KDE. Note, this is entirely optional and"
  echo "everything will continue to work just fine without it."
  echo ""
fi

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
