INCLUDES = $(all_includes)
METASOURCES = AUTO

# Application settings data
kde_kcfg_DATA = protoeditor.kcfg

lib_LTLIBRARIES = libsettings.la
libsettings_la_LDFLAGS = $(all_libraries)
libsettings_la_SOURCES = debuggersettings.kcfgc debuggersettingswidget.cpp
noinst_HEADERS = debuggersettingswidget.h
