INCLUDES = -I$(top_srcdir)/. -I$(top_srcdir)/src/common 	-I$(top_srcdir)/src/protoeditor -I$(top_srcdir)/src/settings $(all_includes)
METASOURCES = AUTO
libcommonpython_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libcommonpython.la
libcommonpython_la_SOURCES = pythonvariable.cpp
noinst_HEADERS = pythonvariable.h
