INCLUDES = -I$(top_srcdir)/. -I$(top_srcdir)/src/common 	-I$(top_srcdir)/src/protoeditor -I$(top_srcdir)/src/settings $(all_includes)
METASOURCES = AUTO
libcommonperl_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libcommonperl.la
libcommonperl_la_SOURCES = perlvariable.cpp
noinst_HEADERS = perlvariable.h
